--- a/Readme
+++ b/Readme
@@ -23,5 +23,6 @@ Flix is an app that allows users to browse movies from the [The Movie Database A
 <p>
 <img src="https://im.ezgif.com/tmp/ezgif-1-9298c9ccb6.gif" width=250><br>
 </p>
+![Alt Text](https://im.ezgif.com/tmp/ezgif-1-9298c9ccb6.gif)
 ### Notes
 had issues with ruby dependencies on silicon mac
