--- a/Readme
+++ b/Readme
@@ -21,6 +21,6 @@ Flix is an app that allows users to browse movies from the [The Movie Database A
 
 ### App Walkthrough GIF
 
-![](https://im.ezgif.com/tmp/ezgif-1-9298c9ccb6.gif)
+![Alt text](https://im.ezgif.com/tmp/ezgif-1-9298c9ccb6.gif)
 ### Notes
 had issues with ruby dependencies on silicon mac
