--- a/Readme
+++ b/Readme
@@ -20,7 +20,6 @@ Flix is an app that allows users to browse movies from the [The Movie Database A
 - [ ] (1pt) Run your app on a real device.
 
 ### App Walkthrough GIF
-
-![Alt text](https://im.ezgif.com/tmp/ezgif-1-9298c9ccb6.gif)
+can't seem to embed gif, link is at https://im.ezgif.com/tmp/ezgif-1-9298c9ccb6.gif
 ### Notes
 had issues with ruby dependencies on silicon mac
